--- a/WebContent/ThinkMine/wp-content/themes/OneCommunity/css/toolbar-anim.css
+++ b/WebContent/ThinkMine/wp-content/themes/OneCommunity/css/toolbar-anim.css
@@ -68,8 +68,7 @@
 	transform-origin: 0% 0%;
 }
 
-
 .auto_whfit_anim{
-	transition : width 1s; height 1s, left 1s, top 1s;
-	-webkit-transition: width 1s; height 1s, left 1s, top 1s;
+	transition : width 1s, height 1s;
+	-webkit-transition: width 1s, height 1s;
 }
